--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
             background-color: #444c56;
             color: #fff;
         }
+         body {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f0f0f0;
+            margin: 0;
+            cursor: url('https://example.com/your-image.png'),
     </style>
 </head>
         <h3>Menu</h3>
