--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             document.body.classList.toggle('dark');
             document.body.classList.toggle('light');
             themeToggle.textContent = 
-                document.body.classList.contains('dark') ? 'Chuyển về chủ đề sáng' : 'Chuyển về chủ đề tối';
+                document.body.classList.contains('dark') ? 'Light' : 'Dark';
         });
     </script>
 </body>
