--- a/index.html
+++ b/index.html
@@ -75,15 +75,9 @@
         <h2>Thông tin</h2>
         <p>Xin Chào Đến Với Trang Laygate ở đây là nơi lưu trữ Các Tài Liệu</p>
     </div>
-    <button id="theme-toggle">Sáng|Tối</button>
-            <button class="linux-button" id="linuxButton">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/265px-Tux.svg.png" alt="Linux Logo">
-       Giả Lập Linux 
-    </button>
-
     <div class="overlay" id="overlay"></div>
     <div class="dialog" id="dialog">
-        <h2>Trang Web Được Nhúng</h2>
+        <h2>Linux EmulatorEmulator</h2>
         <iframe src="https://phuoc2k9evien.github.io/jslinux/" width="400" height="300"></iframe>
         <br>
         <button class="close-button" id="closeButton">Đóng</button>
@@ -107,25 +101,6 @@
             document.body.classList.toggle('light');
             themeToggle.textContent = 
                 document.body.classList.contains('dark') ? 'Light' : 'Dark';
-        }
-                                       const linuxButton = document.getElementById('linuxButton');
-        const dialog = document.getElementById('dialog');
-        const overlay = document.getElementById('overlay');
-        const closeButton = document.getElementById('closeButton');
-
-        linuxButton.addEventListener('click', () => {
-            dialog.style.display = 'block';
-            overlay.style.display = 'block';
-        });
-
-        closeButton.addEventListener('click', () => {
-            dialog.style.display = 'none';
-            overlay.style.display = 'none';
-        });
-
-        overlay.addEventListener('click', () => {
-            dialog.style.display = 'none';
-            overlay.style.display = 'none';
         });
         
 </body>
