--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class="overlay" id="overlay"></div>
     <div class="dialog" id="dialog">
-        <h2>Linux EmulatorEmulator</h2>
+        <h2>Linux</h2>
         <iframe src="https://phuoc2k9evien.github.io/jslinux/" width="400" height="300"></iframe>
         <br>
         <button class="close-button" id="closeButton">Đóng</button>
