--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             margin: 0;
             transition: background-color 0.3s, color 0.3s;
             font-family: Arial, sans-serif;
+            background-image: url('bg.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;  
+            background-size: cover;
         }
         header {
             display: flex;
