--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@
             themeToggle.textContent = 
                 document.body.classList.contains('dark') ? 'Light' : 'Dark';
         });
-        
+        <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(795740, {whitelist: [], blacklist: []});</script>
 </body>
 </html>
