--- a/index.html
+++ b/index.html
@@ -67,44 +67,19 @@
             color: #fff;
         }
     </style>
-        <h3>Menu</h3>
-        <a href="https://facebook.com/Phuoc2k9evn">FB</a>
-        <a href="https://tiktok.com">Tiktok</a>
-            <a href="mailto:gofan6969@gmail.com">Mail</a>
-        <a href="tel:+84985769526">Phone</a>
     </div>
 <body class="light">
     <div id="clock"></div>
     <div id="info">
         <h2>Thông tin</h2>
-        <p>Xin Chào Đến Với Trang Laygate ở đây là nơi lưu trữ Các Tài Liệu</p>
+        <p>Xin Chào Đến Với Blog Laygate </p>
     </div>
-    <div class="overlay" id="overlay"></div>
-    <div class="dialog" id="dialog">
-        <h2>Linux</h2>
-        <iframe src="https://phuoc2k9evien.github.io/jslinux/" width="680" height="530"></iframe>
-        <br>
-    </div>
-
-    <script>
-        // Cài đặt đồng hồ
-        function updateClock() {
-            const now = new Date();
-            const formattedTime = now.toLocaleTimeString('vi-VN');
-            document.getElementById('clock').textContent = formattedTime;
-        }
-
-        setInterval(updateClock, 1000);
-        updateClock(); // Gọi hàm ngay lần đầu để hiển thị thời gian ngay lập tức
-
-        // Chuyển đổi chủ đề
-        const themeToggle = document.getElementById('theme-toggle');
-        themeToggle.addEventListener('click', () => {
-            document.body.classList.toggle('dark');
-            document.body.classList.toggle('light');
-            themeToggle.textContent = 
-                document.body.classList.contains('dark') ? 'Light' : 'Dark';
-        });
+    
         <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(795740, {whitelist: [], blacklist: []});</script>
 </body>
+    <a>Liên Hệ </a>   
+            <a href="https://facebook.com/Phuoc2k9evn">FB</a>
+        <a href="https://tiktok.com">Tiktok</a>
+            <a href="mailto:gofan6969@gmail.com">Mail</a>
+        <a href="tel:+84985769526">Phone</a>
 </html>
